# PTT3

./: .gitignore  DemoMaze.json  Readme.md
Common/: LogBuffer.h  LogMessage.h
Generic Module Client/: CMakeLists.txt  Makefile  ModuleClient.cpp
Gpio/: LedController.cpp  LedController.hpp  Makefile  README.txt  ServerMock.cpp
Gpio/Arduino/Led/: Led.ino
Graphical Maze Designer/MazeDesigner/PTT3/: Form1.Designer.cs  Form1.cs  Form1.resx  Maze.cs  MazeDesigner.csproj
Graphical Maze Designer/MazeDesigner/PTT3/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Logger/: LogBuffer.h  LogMessage.h  Logger.cpp  Logger.hpp  LoggerCentral.cpp  LoggerCentral.hpp  Makefile  MazeSolverLogs  MockCentral.cpp  MockServer.cpp  loggerCentral  mock
Module/: CMakeLists.txt  Makefile  ModuleClient.cpp  ModuleData.cpp  ModuleData.hpp  ModuleHandler.cpp  ModuleHandler.hpp  ModuleServer.cpp  SocketUtils.cpp  SocketUtils.hpp  SolverSocketServer.cpp
Modules Server/: CMakeLists.txt  InputHandler.hpp  Main.cpp  ModuleChain.cpp  ModuleChain.hpp  ModuleData.cpp  ModuleData.hpp  ModuleHandler.cpp  ModuleHandler.hpp  ModuleServer.cpp
Plotter/: CMakeLists.txt  Makefile  PlotInstruction.cpp  PlotInstruction.h  Plotter.cpp  Plotter.h  PlotterController.cpp  PlotterController.h  PlotterProgram  PlotterProgram.cpp  PlotterStatus.h
Scanner/: CMakeLists.txt  MotorDriver.cpp  MotorDriver.h  Scanner  Scanner.cpp  Scanner.h  ScannerControl.cpp  ScannerControl.h  main  main.cpp  settings.conf
Scanner/lib/: Makefile
Scanner/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo
Server/: AcceptTCPConnection.cpp  Auxiliary.c  Auxiliary.h  CreateTCPClientSocket.c  CreateTCPClientSocket.h  CreateTCPServerSocket.c  CreateTCPServerSocket.cpp  Makefile  MockModule.cpp  Module.cpp  Server.cpp
SimpleMazePrinter/: Makefile  SimpleMazePrinter.cpp  SimpleMazePrinter.hpp
SocketUtils/: CMakeLists.txt  SocketUtils.cpp  SocketUtils.hpp
Solver/: CMakeLists.txt  IModule.hpp  IModuleIN.hpp  IModuleINOUT.hpp  IModuleOUT.hpp  Makefile  MazeMessage.cpp  MazeMessage.hpp  MazeParser.cpp  MazeParser.hpp  MazeSolver.cpp  MazeSolver.hpp  MazeSolverTest  MazeSolverTest.cpp  Message.cpp  Message.h  MessageListener.cpp  MessageListener.hpp  MessageSender.cpp  MessageSender.hpp  SocketUtils.hpp  Solver.cpp  SolverModule  SolverSocketClient.cpp  SolverSocketServer.cpp  input.json  input.json.org  input2.json  main.cpp
Solver/maze_parser/: MazeMessage.cpp  MazeMessage.hpp  MazeParser.cpp  MazeParser.hpp
gui/PTT3/: MazeDesigner.sln  PTT3.sln
gui/PTT3/PTT3/: Form1.Designer.cs  Form1.cs  Form1.resx  Maze.cs  PTT3.csproj  Program.cs
gui/PTT3/PTT3/Properties/: Resources.Designer.cs  Settings.Designer.cs
maze_parser/: MazeMessage.cpp  MazeMessage.hpp  MazeParser.cpp  MazeParser.hpp  main.cpp
